--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Your Figma widget",
   "scripts": {
-    "build": "esbuild widget-src/code.tsx --bundle --outfile=dist/code.js --target=es6",
+    "build": "webpack",
+    "watch": "npm run build -- --watch",
     "lint": "eslint --ext .ts,.tsx --ignore-pattern node_modules .",
     "lint:fix": "eslint --ext .ts,.tsx --ignore-pattern node_modules --fix .",
-    "tsc": "tsc --noEmit -p widget-src",
-    "watch": "npm run build -- --watch"
+    "tsc": "tsc --noEmit -p widget-src"
   },
   "author": "",
   "license": "",
@@ -19,7 +19,10 @@
     "@typescript-eslint/parser": "^6.12.0",
     "esbuild": "*",
     "eslint": "^8.54.0",
-    "typescript": "^5.3.2"
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +45,9 @@
         }
       ]
     }
+  },
+  "dependencies": {
+    "json-as-xlsx": "^2.5.6",
+    "xlsx": "^0.18.5"
   }
 }
